build: show enforcement mode with kubectl
Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/chart/crds/security.everoute.io_securitypolicies.yaml
+++ b/deploy/chart/crds/security.everoute.io_securitypolicies.yaml
@@ -26,6 +26,9 @@ spec:
     - jsonPath: .spec.policyTypes
       name: PolicyTypes
       type: string
+    - jsonPath: .spec.securityPolicyEnforcementMode
+      name: Enforcement
+      type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
