--- a/deploy/chart/crds/security.everoute.io_endpoints.yaml
+++ b/deploy/chart/crds/security.everoute.io_endpoints.yaml
@@ -61,6 +61,28 @@ spec:
                   be specified. The ExtendLabels could be selected by selector in
                   SecurityPolicy or EndpointGroup.
                 type: object
+              ports:
+                items:
+                  description: NamedPort represents a Port with a name on Pod.
+                  properties:
+                    name:
+                      description: Name represents the associated name with this Port
+                        number.
+                      type: string
+                    port:
+                      description: Port represents the Port number.
+                      format: int32
+                      type: integer
+                    protocol:
+                      description: Protocol for port. Must be UDP, TCP  TODO not icmp
+                        webhook
+                      enum:
+                      - TCP
+                      - UDP
+                      - ICMP
+                      type: string
+                  type: object
+                type: array
               reference:
                 description: Reference of an endpoint, also the external_id of an
                   ovs interface. We map between endpoint and ovs interface use the
