--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,6 +98,27 @@ jobs:
 
       - name: run test cases
         run: bash hack/run-k8s-e2e.sh
+  
+  run-tower-e2e:
+    runs-on: [self-hosted, tower]
+    steps:
+      - uses: actions/checkout@v3
+      
+      # TODO: Not implemented
+
+      # - name: reset environment
+
+      # - name: build everoute
+
+      # - name: install everoute
+
+      # - name: setup environment
+
+      - name: skip-known-bugs
+        run: git am -s < hack/0001-Skip-known-bugs-in-everoute-1.1.0.patch
+        
+      - name: run test cases
+        run: sudo go test ./tests/e2e/cases/. -v --count=1 --timeout=1h
 
   generate-check:
     runs-on: [ubuntu-20.04]
@@ -116,7 +137,7 @@ jobs:
 
   slack-notification:
     if: ${{ always() }}
-    needs: [ pr-check,golint,run-e2e,run-k8s-e2e,generate-check ]
+    needs: [ pr-check,golint,run-e2e,run-k8s-e2e,run-tower-e2e,generate-check ]
     runs-on: [ ubuntu-20.04 ]
     env:
       SLACK_COLOR: 2EA44F
@@ -124,6 +145,7 @@ jobs:
       RESULT_GOLINT: ":white_check_mark:"
       RESULT_RUN_E2E: ":white_check_mark:"
       RESULT_RUN_K8S_E2E: ":white_check_mark:"
+      RESULT_RUN_TOWER_E2E: ":white_check_mark:"
       RESULT_GENERATE_CHECK: ":white_check_mark:"
     steps:
       - if: ${{ needs.pr-check.result == 'failure'}}
@@ -134,6 +156,8 @@ jobs:
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_E2E=:x:" >> $GITHUB_ENV
       - if: ${{ needs.run-k8s-e2e.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_K8S_E2E=:x:" >> $GITHUB_ENV
+      - if: ${{ needs.run-tower-e2e.result == 'failure'}}
+        run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_TOWER_E2E=:x:" >> $GITHUB_ENV
       - if: ${{ needs.generate-check.result == 'failure'}}
         run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_GENERATE_CHECK=:x:" >> $GITHUB_ENV
 
@@ -145,6 +169,8 @@ jobs:
         run: echo "RESULT_RUN_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
       - if: ${{ needs.run-k8s-e2e.result == 'cancelled'}}
         run: echo "RESULT_RUN_K8S_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
+      - if: ${{ needs.run-tower-e2e.result == 'cancelled'}}
+        run: echo "RESULT_RUN_TOWER_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
       - if: ${{ needs.generate-check.result == 'cancelled'}}
         run: echo "RESULT_GENERATE_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
 
@@ -203,6 +229,10 @@ jobs:
                       {
                         "type": "mrkdwn",
                         "text": "${{ env.RESULT_RUN_K8S_E2E }} => *run-k8s-e2e*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ env.RESULT_RUN_TOWER_E2E }} => *run-tower-e2e*"
                       },
                       {
                         "type": "mrkdwn",
