ci: add more runner tag for k8s-e2e

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
         run: sudo -H make e2e-test
 
   run-k8s-e2e:
-    runs-on: self-hosted
+    runs-on: [self-hosted, k8s]
     steps:
       - uses: actions/checkout@v2
 
