--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, pod]
     steps:
       - run: echo "IMAGE_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
@@ -22,17 +22,31 @@ jobs:
 
       - uses: docker/setup-qemu-action@v2
 
-      - uses: docker/setup-buildx-action@v2
+      - run: docker context create build
 
-      - uses: docker/login-action@v2
+      - uses: docker/setup-buildx-action@v2
+        with:
+          endpoint: build
+
+      - name: Login docker hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_PUSH_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PUSH_TOKEN }}
+      
+      - name: Login registry.smtx.io
+        uses: docker/login-action@v2
+        with:
+          registry: registry.smtx.io
+          username: ${{ secrets.HARBOR_PUSH_USERNAME }}
+          password: ${{ secrets.HARBOR_PUSH_TOKEN }}
 
       - uses: docker/build-push-action@v2
         with:
           file: build/images/release/Dockerfile
-          tags: everoute/release:${{ env.IMAGE_TAG }}
+          tags: |
+            everoute/release:${{ env.IMAGE_TAG }}
+            registry.smtx.io/everoute/release:${{ env.IMAGE_TAG }}
           platforms: linux/amd64,linux/arm64
           push: true
 
