--- a/deploy/chart/templates/agent/role.yaml
+++ b/deploy/chart/templates/agent/role.yaml
@@ -22,6 +22,7 @@ rules:
   resources:
     - pods
     - nodes
+    - services
   verbs:
     - patch
     - create
@@ -49,3 +50,11 @@ rules:
     - list
     - watch
     - create
+- apiGroups:
+    - service.everoute.io
+  resources:
+    - serviceports
+  verbs:
+    - get
+    - list
+    - watch
