feat(cni): generate BaseSvc cache and push service cluster ip flow

--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1875,6 +1875,9 @@ spec:
     - jsonPath: .spec.svcRef
       name: service
       type: string
+    - jsonPath: .spec.portName
+      name: portName
+      type: string
     - jsonPath: .spec.backends
       name: Backends
       type: string
@@ -1919,6 +1922,9 @@ spec:
                   - port
                   type: object
                 type: array
+              portName:
+                description: PortName is the service port name
+                type: string
               svcRef:
                 description: SvcRef is the ServicePort related Service name
                 type: string
@@ -2007,6 +2013,7 @@ rules:
   resources:
     - pods
     - nodes
+    - services
   verbs:
     - patch
     - create
@@ -2034,6 +2041,14 @@ rules:
     - list
     - watch
     - create
+- apiGroups:
+    - service.everoute.io
+  resources:
+    - serviceports
+  verbs:
+    - get
+    - list
+    - watch
 ---
 # Source: everoute/templates/controller/role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
