--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,9 @@ jobs:
     runs-on: [ubuntu-20.04]
     steps:
       - uses: actions/checkout@v2
+
+      - uses: webiny/action-conventional-commits@v1.1.0
+
       - name: run everoute unit test
         run: |
           sudo make docker-test
