ci: the release action auto generate changelog

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -81,3 +81,4 @@ jobs:
         with:
           files: deploy/everoute.yaml
           name: ${{ needs.build.outputs.ReleaseTag }}
+          generate_release_notes: true
