--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,10 +6,11 @@ on:
       - "**"
     branches:
       - main
+      - autoGenChangelog
 
 jobs:
   build:
-    runs-on: [self-hosted, pod]
+    runs-on: [ubuntu-latest]
     steps:
       - run: echo "IMAGE_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
@@ -20,35 +21,35 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - uses: docker/setup-qemu-action@v2
+      # - uses: docker/setup-qemu-action@v2
 
-      - run: docker context create build
+      # - run: docker context create build
 
-      - uses: docker/setup-buildx-action@v2
-        with:
-          endpoint: build
+      # - uses: docker/setup-buildx-action@v2
+      #   with:
+      #     endpoint: build
 
-      - name: Login docker hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_PUSH_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PUSH_TOKEN }}
+      # - name: Login docker hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_PUSH_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_PUSH_TOKEN }}
       
-      - name: Login registry.smtx.io
-        uses: docker/login-action@v2
-        with:
-          registry: registry.smtx.io
-          username: ${{ secrets.HARBOR_PUSH_USERNAME }}
-          password: ${{ secrets.HARBOR_PUSH_TOKEN }}
+      # - name: Login registry.smtx.io
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: registry.smtx.io
+      #     username: ${{ secrets.HARBOR_PUSH_USERNAME }}
+      #     password: ${{ secrets.HARBOR_PUSH_TOKEN }}
 
-      - uses: docker/build-push-action@v2
-        with:
-          file: build/images/release/Dockerfile
-          tags: |
-            everoute/release:${{ env.IMAGE_TAG }}
-            registry.smtx.io/everoute/release:${{ env.IMAGE_TAG }}
-          platforms: linux/amd64,linux/arm64
-          push: true
+      # - uses: docker/build-push-action@v2
+      #   with:
+      #     file: build/images/release/Dockerfile
+      #     tags: |
+      #       everoute/release:${{ env.IMAGE_TAG }}
+      #       registry.smtx.io/everoute/release:${{ env.IMAGE_TAG }}
+      #     platforms: linux/amd64,linux/arm64
+      #     push: true
 
       - name: Check if tag is a release tag
         run: |
@@ -81,3 +82,4 @@ jobs:
         with:
           files: deploy/everoute.yaml
           name: ${{ needs.build.outputs.ReleaseTag }}
+          generate_release_notes: true
