--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ on:
       - '**'
 
   push:
-    branches: [ main, release-1.0 ]
+    branches: [ main, release-1.0, 1.0.7 ]
 
   schedule:
     # 7:00 UTC+8
