feat(cni): generate ServicePort resource from Endpoints resource

--- a/deploy/chart/crds/service.everoute.io_serviceports.yaml
+++ b/deploy/chart/crds/service.everoute.io_serviceports.yaml
@@ -19,6 +19,9 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .spec.svcRef
+      name: service
+      type: string
     - jsonPath: .spec.backends
       name: Backends
       type: string
