--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,13 +64,31 @@ jobs:
 
   publish-release:
     needs: [build]
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, pod]
     if: ${{ needs.build.outputs.NeedRelease == 'true' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      
+      - name: install helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.10.1
+
+      - name: Login docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_PUSH_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PUSH_TOKEN }}
+      
+      - name: Login registry.smtx.io
+        uses: docker/login-action@v2
+        with:
+          registry: registry.smtx.io
+          username: ${{ secrets.HARBOR_PUSH_USERNAME }}
+          password: ${{ secrets.HARBOR_PUSH_TOKEN }}
 
       - name: Generate deploy yaml
         run: helm template deploy/chart --include-crds --set image.tag=${{ needs.build.outputs.ReleaseTag }} > deploy/everoute.yaml
@@ -82,3 +100,13 @@ jobs:
           files: deploy/everoute.yaml
           name: ${{ needs.build.outputs.ReleaseTag }}
           generate_release_notes: true
+
+      - name: helm chart package and push
+        run: |
+          sed -i s#latest#${{ needs.build.outputs.ReleaseTag }}#g deploy/chart/values.yaml
+          helm package deploy/chart --app-version ${{ needs.build.outputs.ReleaseTag }} --version ${{ needs.build.outputs.ReleaseTag }}
+          helm push everoute-${{ needs.build.outputs.ReleaseTag }}.tgz oci://registry-1.docker.io/everoute
+          rm -f everoute-${{ needs.build.outputs.ReleaseTag }}.tgz
+          sed -i s#everoute/release#registry.smtx.io/everoute/release#g deploy/chart/values.yaml
+          helm package deploy/chart --app-version ${{ needs.build.outputs.ReleaseTag }} --version ${{ needs.build.outputs.ReleaseTag }}
+          helm push everoute-${{ needs.build.outputs.ReleaseTag }}.tgz oci://registry.smtx.io/everoute
