--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -40,7 +40,7 @@ spec:
             - --port=9443
             - --enable-cni=true
             - -v=0
-          readinessProbe:
+          livenessProbe:
             httpGet:
               scheme: HTTPS
               port: 9443
@@ -48,4 +48,4 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 10
             successThreshold: 1
-            failureThreshold: 3
+            failureThreshold: 5
