fix(cni): pod add liveness probe

--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -41,7 +41,7 @@ spec:
             - --enable-cni=true
             - --enable-proxy=true
             - -v=0
-          readinessProbe:
+          livenessProbe:
             httpGet:
               scheme: HTTPS
               port: 9443
