--- a/deploy/chart/templates/agent/agent.yaml
+++ b/deploy/chart/templates/agent/agent.yaml
@@ -91,13 +91,13 @@ spec:
               readOnly: true
             - name: tmp
               mountPath: /tmp
-          readinessProbe:
+          livenessProbe:
             exec:
               command: ["/usr/share/openvswitch/scripts/ovs-ctl", "status"]
             initialDelaySeconds: 5
             periodSeconds: 10
             successThreshold: 1
-            failureThreshold: 3
+            failureThreshold: 5
         - name: everoute-agent
           image: {{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}
           imagePullPolicy: IfNotPresent
@@ -112,7 +112,7 @@ spec:
                   fieldPath: spec.nodeName
           securityContext:
             privileged: true
-          readinessProbe:
+          livenessProbe:
             httpGet:
               host: 127.0.0.1
               port: 30002
@@ -120,7 +120,7 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 10
             successThreshold: 1
-            failureThreshold: 3
+            failureThreshold: 5
           volumeMounts:
             - name: everoute-run
               mountPath: /var/run/everoute/
