fix(cni): pod add liveness probe

--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -40,7 +40,7 @@ spec:
             - --port=9443
             - --enable-cni=true
             - -v=0
-          readinessProbe:
+          livenessProbe:
             httpGet:
               scheme: HTTPS
               port: 9443
